# saas-odonto

./: .env.example  .gitignore  README.md  docker-compose.yml  railway.toml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_rls_policies.py  0003_patients.py  0004_appointments.py  0005_payments.py  0006_whatsapp_numbers.py  0007_conversations.py  0008_users_profile.py  0009_grant_app_user.py  0010_clinic_integrations.py  0011_appointment_tipo.py
backend/app/: main.py
backend/app/core/: config.py  crypto.py  database.py  db_url.py  ratelimit.py  security.py  security_log.py  tenant.py
backend/app/modules/ai_agent/: router.py  service.py  tools.py
backend/app/modules/auth/: deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/billing/: factory.py  gateway.py  mercadopago_gateway.py  mock_gateway.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/clinics/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/conversations/: models.py  repository.py  router.py  schemas.py  (+1 more)
backend/app/shared/: exceptions.py  models.py
backend/app/tests/: conftest.py  test_ai_agent.py  test_auth.py  test_billing.py  test_conversations.py  test_gemini_provider.py  test_google_calendar.py  test_integrations.py  test_mercadopago_gateway.py  test_meta_channel.py  test_patients.py  test_scheduling.py  test_tenant_isolation.py  test_whatsapp_numbers.py
backend/scripts/: seed.py
(+108 files in other folders)
